--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,12 +3,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>About Landing-Page</h2>
+              <h2>About Me</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>Hey! I'm Nancy Tao, a computer science student at Georgia Tech. I'm particularly interested in artificial intelligence, linguistics, natural language processing, and modeling. Outside of the technical stuff, I'm also passionate about education reform, freestyle dancing, and mediocre pop music.</p>
                 <br/>
               </div>
         </div>
