--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,15 +4,21 @@
 
 			<div class="row">
 				<div class="col-lg-6">
-					<h2>Keep in Touch:</h2>
+					<h2>Contact Me:</h2>
 				</div>
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
-						{% for social in site.social %}
 						<li>
-							<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
-						</li>
-						{% endfor %}
+								<a href="mailto:nancytao@gatech.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">email</span></a>
+                            </li>
+
+                            <li>
+                                <a href="https://github.com/nancytao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+                            </li>
+
+                            <li>
+                                <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+                            </li>
 					</ul>
 				</div>
 			</div>
