Added resume button to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,11 +15,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
             	<li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="#about">About Me</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a class="page-scroll" href="#services">Services</a>
-                </li>
+                </li> -->
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
@@ -53,6 +53,10 @@
 
                             <li>
                                 <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+                            </li>
+
+                            <li>
+                                <a href="resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> <span class="network-name">Resume</span></a>
                             </li>
 						</ul>
 					</div>
