Added link to code source (this repo)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,10 @@
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved</p>
+                <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved
+                    <br>
+                    View the code on my GitHub <a href="http://github.com/nancytao/nancytao.github.io/">here</a>!
+                </p>
             </div>
         </div>
     </div>
