Updated about me with cute java references

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,11 +1,19 @@
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container content-section text-left">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
               <h2>About Me</h2>
               <br/>
-                <p>Hey! I'm Nancy Tao, a computer science student at Georgia Tech. I'm particularly interested in artificial intelligence, linguistics, natural language processing, and modeling. Outside of the technical stuff, I'm also passionate about education reform, freestyle dancing, and mediocre pop music.</p>
+                <p><b>Hello, World! My name is Nancy Tao.</b>
+                  <br/><br/>
+                  I'm a first year computer science student at Georgia Tech minoring in psychology. I'm particularly interested in artificial intelligence, linguistics, and design. Currently, I'm spending my freetime learning Android app development.
+                  <br/><br/>
+                  Outside of the technical stuff, I'm also passionate about (in no particular order) education reform, freestyle dancing, musical theater, twitter bots, interior design, Shakespeare...
+                  <br/><br/>
+                  While I have a lot of ideas, I'm not sure yet what I want to do with my life. However, I know it's going to be an amazing ride, so join me!
+                  <br/><br/>
+                  <b>System.exit(0)</b></p>
                 <br/>
               </div>
         </div>
