--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Landing Page Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body,
 html {
     width: 100%;
@@ -32,8 +26,7 @@ p {
 }
 
 .intro-header {
-    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
+    padding-top: 50px;
     text-align: center;
     color: #f8f8f8;
     background: url(../img/intro-bg.jpg) no-repeat center center;
@@ -117,7 +110,7 @@ p {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/banner-bg.jpg) no-repeat center bottom;
     background-size: cover;
 }
 
@@ -132,8 +125,8 @@ p {
 }
 
 .banner-social-buttons {
-    float: right;
-    margin-top: 0;
+    float: left;
+    margin-top: 15px;
 }
 
 @media(max-width:1199px) {
