--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -29,7 +29,7 @@ p {
     padding-top: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/intro-bg.jpg) no-repeat center top;
     background-size: cover;
 }
 
