--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,29 +3,27 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-lg-6">
-					<h2>Contact Me:</h2>
+				<div class="col-xs-7 col-sm-7 col-lg-7">
+					<h2>Find Me:</h2>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-xs-12 col-xs-offset-2 col-sm-offset-0">
 					<ul class="list-inline banner-social-buttons">
 						<li>
-								<a href="mailto:nancytao@gatech.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">email</span></a>
-                            </li>
+							<a href="mailto:nancytao@gatech.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">email</span></a>
+                        </li>
 
-                            <li>
-                                <a href="https://github.com/nancytao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
-                            </li>
+                        <li>
+                            <a href="https://github.com/nancytao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+                        </li>
 
-                            <li>
-                                <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
-                            </li>
+                        <li>
+                            <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+                        </li>
 					</ul>
 				</div>
 			</div>
-
 		</div>
 		<!-- /.container -->
-
 	</div>
 </section>
 <!-- /.banner -->
