Added links to interesting sites, no sponsors lol

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,18 +2,29 @@
     <section id="about" class="container content-section text-left">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-              <br/><br/>
-              <h2>About Me</h2>
-              <br/>
+                <br/><br/>
+
+                <h2>About Me</h2>
+
+                <br/>
+
                 <p><b>Hello, World! My name is Nancy Tao.</b>
-                  <br/><br/>
-                  I'm a first year computer science student at Georgia Tech minoring in psychology. I'm particularly interested in artificial intelligence, linguistics, and design. Currently, I'm spending my freetime learning Android app development.
-                  <br/><br/>
-                  Outside of the technical stuff, I'm also passionate about (in no particular order) education reform, freestyle dancing, musical theater, twitter bots, interior design, Shakespeare...
-                  <br/><br/>
-                  While I have a lot of ideas, I'm not sure yet what I want to do with my life. However, I know it's going to be an amazing ride, so join me!
-                  <br/><br/>
-                  <b>System.exit(0)</b></p>
+                    <br/><br/>
+                    I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech minoring in <a href="http://psychology.gatech.edu/">psychology</a>. I'm particularly interested in artificial intelligence, natural language processing, and design. Currently, I'm spending my free time learning Android app development.
+                    <br/><br/>
+                    Outside of the technical stuff, I also geek out about (in no particular order)
+                    <a href="http://www.edpolicythoughts.com/">education</a>,
+                    <a href="https://play.spotify.com/album/1kCHru7uhxBUdzkm4gzRQc">musical theater</a>,
+                    <a href="https://twitter.com/JustToSayBot">twitter bots</a>,
+                    <a href="https://en.wikipedia.org/wiki/Special:Random">Wikipedia</a>,
+                    <a href="https://brainpickings.org/">thinking about life</a>,
+                    <a href="http://www.bmds.bm/files/14/files/productions/arcadia/arcadia-by-tom-stoppard.pdf">literature</a>,
+                    <a href="https://www.ted.com/talks/stuart_firestein_the_pursuit_of_ignorance">TED talks</a>,
+                    <a href="https://www.etsy.com/shop/CCADesign">bow ties</a>...
+                    <br/><br/>
+                    While I have a lot of ideas, I'm not sure yet what I want to do with my life. However, I know it's going to be an amazing ride, so join me!
+                    <br/><br/>
+                <b>System.exit(0);</b></p>
                 <br/>
               </div>
         </div>
