Renamed Services to Projects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                 </li>
 
                 <!-- <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#projects">Projects</a>
                 </li> -->
 
                 <li>
