--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<!-- Navigation -->
+<!-- Navigation bar unneeded until project snippets added :)
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
 
-        <!-- Brand and toggle get grouped for better mobile display -->
+        Brand and toggle get grouped for better mobile display
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -13,26 +13,26 @@
             <a class="navbar-brand page-scroll" href="#home">{{ site.title }}</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        Collect the nav links, forms, and other content for toggling
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
             	<li>
                     <a class="page-scroll" href="#about">About Me</a>
                 </li>
 
-                <!-- <li>
+                <li>
                     <a class="page-scroll" href="#projects">Projects</a>
-                </li> -->
+                </li>
 
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
+        /.navbar-collapse
     </div>
-    <!-- /.container -->
-</nav>
+    /.container
+</nav> -->
 
 <section id="home">
 <!-- Header -->
