Added location to about me

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
 
                 <p><b>Hello, World! My name is Nancy Tao.</b>
                     <br/><br/>
-                    I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech minoring in <a href="http://psychology.gatech.edu/">psychology</a>. I'm particularly interested in artificial intelligence, natural language processing, and design. Currently, I'm spending my free time learning Android app development.
+                    I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech minoring in <a href="http://psychology.gatech.edu/">psychology</a>. I'm particularly interested in artificial intelligence, natural language processing, and design. Currently, I'm spending my free time learning Android app development and exploring the wonderful city of Atlanta.
                     <br/><br/>
                     Outside of the technical stuff, I also geek out about (in no particular order)
                     <a href="http://www.edpolicythoughts.com/">education</a>,
