--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,23 +8,26 @@
 
                 <br/>
 
-                <p><b>Hello, World! My name is Nancy Tao.</b>
-                    <br/><br/>
-                    I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech minoring in <a href="http://psychology.gatech.edu/">psychology</a>. I'm particularly interested in artificial intelligence, natural language processing, and design. Currently, I'm spending my free time learning Android app development and exploring the wonderful city of Atlanta.
-                    <br/><br/>
-                    Outside of the technical stuff, I also geek out about (in no particular order)
-                    <a href="http://www.edpolicythoughts.com/">education</a>,
-                    <a href="https://play.spotify.com/album/1kCHru7uhxBUdzkm4gzRQc">musical theater</a>,
-                    <a href="https://twitter.com/JustToSayBot">twitter bots</a>,
-                    <a href="https://en.wikipedia.org/wiki/Special:Random">Wikipedia</a>,
-                    <a href="https://brainpickings.org/">thinking about life</a>,
-                    <a href="http://www.bmds.bm/files/14/files/productions/arcadia/arcadia-by-tom-stoppard.pdf">literature</a>,
-                    <a href="https://www.ted.com/talks/stuart_firestein_the_pursuit_of_ignorance">TED talks</a>,
-                    <a href="https://www.etsy.com/shop/CCADesign">bow ties</a>...
-                    <br/><br/>
-                    While I have a lot of ideas, I'm not sure yet what I want to do with my life. However, I know it's going to be an amazing ride, so join me!
-                    <br/><br/>
-                <b>System.exit(0);</b></p>
+                <p class="being-a-nerd">Hello, World! My name is Nancy Tao.</p><br/>
+
+                <p>
+                I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech minoring in <a href="http://psychology.gatech.edu/">psychology</a>. I'm particularly interested in artificial intelligence, natural language processing, and design. Currently, I'm spending my free time learning Android app development and exploring the wonderful city of Atlanta.
+                <br/><br/>
+                Outside of the technical stuff, I also geek out about (in no particular order)
+                <a href="http://www.edpolicythoughts.com/">education</a>,
+                <a href="https://play.spotify.com/album/1kCHru7uhxBUdzkm4gzRQc">musical theater</a>,
+                <a href="https://twitter.com/JustToSayBot">twitter bots</a>,
+                <a href="https://en.wikipedia.org/wiki/Special:Random">Wikipedia</a>,
+                <a href="https://brainpickings.org/">thinking about life</a>,
+                <a href="http://www.bmds.bm/files/14/files/productions/arcadia/arcadia-by-tom-stoppard.pdf">literature</a>,
+                <a href="https://www.ted.com/talks/stuart_firestein_the_pursuit_of_ignorance">TED talks</a>,
+                <a href="https://www.etsy.com/shop/CCADesign">bow ties</a>...
+                <br/><br/>
+                While I have a lot of ideas, I'm not sure yet what I want to do with my life. However, I know it's going to be an amazing ride, so join me!
+                </p>
+
+                <br/>
+                <p class="being-a-nerd">System.exit(0);</p>
                 <br/>
               </div>
         </div>
