--- a/css/nancy-tao.css
+++ b/css/nancy-tao.css
@@ -40,19 +40,19 @@ p {
 }
 
 .intro-message > h1 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 5em;
+    margin: 0px;
+    text-shadow: 2px 2px 3px rgba(0,0,0,.6);
 }
 
 .intro-divider {
     width: 400px;
     border-top: 1px solid #f8f8f8;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
 .intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    text-shadow: 2px 2px 3px rgba(0,0,0,.6);
 }
 
 @media(max-width:767px) {
@@ -67,11 +67,11 @@ p {
     ul.intro-social-buttons > li {
         display: block;
         margin-bottom: 20px;
-        padding: 0;
+        padding: 0px;
     }
 
     ul.intro-social-buttons > li:last-child {
-        margin-bottom: 0;
+        margin-bottom: 0px;
     }
 
     .intro-divider {
@@ -80,10 +80,10 @@ p {
 }
 
 .network-name {
-    text-transform: uppercase;
     font-size: 14px;
     font-weight: 400;
     letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 .content-section-a {
@@ -108,20 +108,20 @@ p {
 }
 
 .banner {
-    padding: 100px 0;
+    padding: 100px 0px;
     color: #f8f8f8;
     background: url(../img/banner-bg.jpg) no-repeat center bottom;
     background-size: cover;
 }
 
 .banner h2 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 3em;
+    margin: 0px;
+    text-shadow: 2px 2px 3px rgba(0,0,0,.6);
 }
 
 .banner ul {
-    margin-bottom: 0;
+    margin-bottom: 0px;
 }
 
 .banner-social-buttons {
@@ -138,19 +138,19 @@ p {
 
 @media(max-width:767px) {
     .banner h2 {
-        margin: 0;
-        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
         font-size: 3em;
+        margin: 0px;
+        text-shadow: 2px 2px 3px rgba(0,0,0,.6);
     }
 
     ul.banner-social-buttons > li {
         display: block;
         margin-bottom: 20px;
-        padding: 0;
+        padding: 0px;
     }
 
     ul.banner-social-buttons > li:last-child {
-        margin-bottom: 0;
+        margin-bottom: 0px;
     }
 }
 
@@ -159,10 +159,10 @@ p {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 50px 0px;
     background-color: #f8f8f8;
 }
 
 p.copyright {
-    margin: 15px 0 0;
+    margin: 15px 0px 0px;
 }
