--- a/css/nancy-tao.css
+++ b/css/nancy-tao.css
@@ -91,12 +91,12 @@ ol {
     text-transform: uppercase;
 }
 
-.content-section-a {
+.project-section-a {
     padding: 50px 0;
     background-color: #f8f8f8;
 }
 
-.content-section-b {
+.project-section-b {
     padding: 50px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
