--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved
                     <br>
-                    View the code on my GitHub <a href="http://github.com/nancytao/nancytao.github.io/">here</a>!
+                    View the code <a href="http://github.com/nancytao/nancytao.github.io/">on my GitHub</a>!
                 </p>
             </div>
         </div>
