--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
                 <p class="being-a-nerd">Hello, World! My name is Nancy Tao.</p><br/>
 
                 <p>
-                I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech with concentrations in <a href="http://www.cc.gatech.edu/intelligence">intelligence</a> and <a href="http://www.cc.gatech.edu/information-internetworks">information internetworks</a>. I'm particularly interested in natural language processing, information security, and web development. Currently, I'm spending my free time learning the MEAN stack through <a href="http://freecodecamp.com/">Free Code Camp</a> and exploring the wonderful city of Atlanta.
+                I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech with concentrations in <a href="http://www.cc.gatech.edu/intelligence">intelligence</a> and <a href="http://www.cc.gatech.edu/information-internetworks">information internetworks</a>. I'm particularly interested in natural language processing, information security, and web development. Currently, I'm spending my free time learning the MEAN stack through <a href="http://freecodecamp.com/">Free Code Camp</a> and exploring the beautiful city of Atlanta.
                 <br/><br/>
                 Outside of the technical stuff, I also geek out about (in no particular order)
                 <a href="http://www.edpolicythoughts.com/">education</a>,
