Updated class name for buttons to be more descriptive

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,15 +8,15 @@
 				<div class="col-xs-12 col-xs-offset-2 col-sm-offset-0">
 					<ul class="list-inline banner-social-buttons">
 						<li>
-							<a href="mailto:nancytao@gatech.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">email</span></a>
+							<a href="mailto:nancytao@gatech.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="networking-name">email</span></a>
                         </li>
 
                         <li>
-                            <a href="https://github.com/nancytao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+                            <a href="https://github.com/nancytao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="networking-name">github</span></a>
                         </li>
 
                         <li>
-                            <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+                            <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="networking-name">linkedin</span></a>
                         </li>
 					</ul>
 				</div>
