--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,19 +9,19 @@
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
 							<li>
-								<a href="mailto:nancytao@gatech.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">email</span></a>
+								<a href="mailto:nancytao@gatech.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="networking-name">email</span></a>
                             </li>
 
                             <li>
-                                <a href="https://github.com/nancytao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+                                <a href="https://github.com/nancytao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="networking-name">github</span></a>
                             </li>
 
                             <li>
-                                <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+                                <a href="https://linkedin.com/in/nancytao42" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="networking-name">linkedin</span></a>
                             </li>
 
                             <li>
-                                <a href="resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> <span class="network-name">Resume</span></a>
+                                <a href="resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> <span class="networking-name">Resume</span></a>
                             </li>
 						</ul>
 					</div>
