--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                             </li>
 
                             <li>
-                                <a href="resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> <span class="networking-name">Resume</span></a>
+                                <a href="resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> <span class="networking-name">resume</span></a>
                             </li>
 						</ul>
 					</div>
