--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
                 <p class="being-a-nerd">Hello, World! My name is Nancy Tao.</p><br/>
 
                 <p>
-                I'm a first year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech with concentrations in <a href="http://www.cc.gatech.edu/intelligence">intelligence</a> and <a href="http://www.cc.gatech.edu/information-internetworks">information internetworks</a>. I'm particularly interested in natural language processing, information security, and web development. Currently, I'm spending my free time learning the MEAN stack through <a href="http://freecodecamp.com/">Free Code Camp</a> and exploring the beautiful city of Atlanta.
+                I'm a second year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech with concentrations in <a href="http://www.cc.gatech.edu/intelligence">intelligence</a> and <a href="http://www.cc.gatech.edu/information-internetworks">information internetworks</a>. I'm particularly interested in natural language processing and information security. Currently, I'm spending my extra time working for <a href="https://security.gatech.edu">Georgia Tech's OIT Cyber Security department</a>, doing research in Dr. Eric Gilbert's <a href="http://comp.social.gatech.edu/">social computing lab</a>, and being a teaching assistant for Georgia Tech's freshmen seminar, CS 1100.
 
                 <br/><br/>
                 Outside of the technical stuff, I also geek out about (in no particular order)
@@ -22,6 +22,9 @@
                 <a href="http://www.bmds.bm/files/14/files/productions/arcadia/arcadia-by-tom-stoppard.pdf">literature</a>,
                 <a href="https://www.ted.com/talks/stuart_firestein_the_pursuit_of_ignorance">TED talks</a>,
                 <a href="https://www.etsy.com/shop/CCADesign">bow ties</a>...
+
+                <br/><br/>
+                I also had the amazing opportunity to study abroad this past summer in Barcelona, which was an absolutely incredible experience!
 
                 <br/><br/>
                 While I have a lot of ideas, I'm not sure yet what I want to do with my life. However, I know it's going to be an amazing ride, so join me!
