--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
                 <p class="being-a-nerd">Hello, World! My name is Nancy Tao.</p><br/>
 
                 <p>
-                I'm a second year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech with concentrations in <a href="http://www.cc.gatech.edu/intelligence">intelligence</a> and <a href="http://www.cc.gatech.edu/information-internetworks">information internetworks</a>. I'm particularly interested in natural language processing and cyber security. Currently, I'm spending my extra time working for <a href="https://security.gatech.edu">Georgia Tech's OIT Cyber Security department</a>, doing research in Dr. Eric Gilbert's <a href="http://comp.social.gatech.edu/">social computing lab</a>, working on a <a href="http://www.vip.gatech.edu/">Vertically Integrated Project</a> about <a href="https://github.com/nancytao/bigbiodatarecapture-ui">analyzing biomedical papers</a>, and being a teaching assistant for <a href="http://www.cc.gatech.edu/mentoring-program">Georgia Tech's CS Freshmen Seminar</a>.
+                I'm a fourth year <a href="http://www.cc.gatech.edu/">computer science</a> student at Georgia Tech with concentrations in <a href="http://www.cc.gatech.edu/media">media</a> and <a href="http://www.cc.gatech.edu/information-internetworks">information internetworks</a>. I'm particularly interested in security and education in computing.
 
                 <br/><br/>
                 Outside of the technical stuff, I also geek out about (in no particular order)
@@ -23,14 +23,7 @@
                 <a href="https://www.ted.com/talks/stuart_firestein_the_pursuit_of_ignorance">TED talks</a>,
                 <a href="https://www.etsy.com/shop/CCADesign">bow ties</a>...
 
-                <br/><br/>
-                I also had the amazing opportunity to study abroad this past summer in Barcelona, which was an absolutely incredible experience!
-
-                <br/><br/>
-                While I have a lot of ideas, I'm not sure yet what I want to do with my life. However, I know it's going to be an amazing ride, so join me!
-                </p>
-
-                <br/>
+                <br/> <br/>
                 <p class="being-a-nerd">System.exit(0);</p>
                 <br/>
               </div>
